--- a/views/install.erb
+++ b/views/install.erb
@@ -18,7 +18,10 @@
         </di>
         <di>
           <dt>API Key</dt>
-            <dd><input type="password" name="api_key" /></dd>
+            <dd>
+              <input type="password" name="api_key" /><br />
+              <a href="https://api.heroku.com/account#change-email">Check your API Key</a>
+            </dd>
         </di>
       </dl>
 
